--- a/prem_prediciton.ipynb
+++ b/prem_prediciton.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c9a3a66a",
    "metadata": {},
    "outputs": [
@@ -52,6 +52,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "import warnings # to supress harmless warninigs\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Fbref scores and fixtures urls per season\n",
@@ -118,6 +120,7 @@
     "\n",
     "def load_stats_for_season(season): # load the team standard stats\n",
     "    url = stats_urls[season] # get the stats url page for this season\n",
+    "    headers = {\"User Agent\"}\n",
     "    tables = pd.read_html(url, flavor=\"html5lib\")\n",
     "    base = tables[0].copy()\n",
     "\n",
@@ -421,22 +424,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b2274c86",
    "metadata": {},
    "outputs": [
     {
      "ename": "HTTPError",
-     "evalue": "403 Client Error: Forbidden for url: https://fbref.com/en/comps/9/2020-2021/schedule/2020-2021-Premier-League-Scores-and-Fixtures",
+     "evalue": "403 Client Error: Forbidden for url: https://fbref.com/en/comps/9/2021-2022/schedule/2021-2022-Premier-League-Scores-and-Fixtures",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 130\u001b[39m\n\u001b[32m    126\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[32m    128\u001b[39m \u001b[38;5;66;03m# === Step 3: Build datasets ===\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m130\u001b[39m train_data = pd.concat([\u001b[43mbuild_match_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m train_seasons], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    131\u001b[39m test_data = pd.concat([build_match_dataset(s) \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m test_seasons], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    133\u001b[39m train_data = add_rolling_form_features(train_data, window=\u001b[32m5\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 90\u001b[39m, in \u001b[36mbuild_match_dataset\u001b[39m\u001b[34m(season)\u001b[39m\n\u001b[32m     89\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuild_match_dataset\u001b[39m(season):\n\u001b[32m---> \u001b[39m\u001b[32m90\u001b[39m     fixtures = \u001b[43mload_fixtures_for_season\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseason\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     91\u001b[39m     stats = load_stats_for_season(season)\n\u001b[32m     93\u001b[39m     merged = fixtures.merge(stats, left_on=\u001b[33m\"\u001b[39m\u001b[33mHomeTeam\u001b[39m\u001b[33m\"\u001b[39m, right_on=\u001b[33m\"\u001b[39m\u001b[33mSquad\u001b[39m\u001b[33m\"\u001b[39m, how=\u001b[33m\"\u001b[39m\u001b[33mleft\u001b[39m\u001b[33m\"\u001b[39m, suffixes=(\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m_Home\u001b[39m\u001b[33m\"\u001b[39m))\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 49\u001b[39m, in \u001b[36mload_fixtures_for_season\u001b[39m\u001b[34m(season)\u001b[39m\n\u001b[32m     47\u001b[39m url = fixture_urls[season]\n\u001b[32m     48\u001b[39m response = requests.get(url, headers=headers)\n\u001b[32m---> \u001b[39m\u001b[32m49\u001b[39m \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     50\u001b[39m tables = pd.read_html(response.text, flavor=\u001b[33m\"\u001b[39m\u001b[33mhtml5lib\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     52\u001b[39m df = tables[\u001b[32m0\u001b[39m].copy()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 136\u001b[39m\n\u001b[32m    132\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[32m    134\u001b[39m \u001b[38;5;66;03m# === Step 3: Build datasets ===\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m136\u001b[39m train_data = pd.concat([\u001b[43mbuild_match_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m train_seasons], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    137\u001b[39m test_data = pd.concat([build_match_dataset(s) \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m test_seasons], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    139\u001b[39m train_data = add_rolling_form_features(train_data, window=\u001b[32m5\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 96\u001b[39m, in \u001b[36mbuild_match_dataset\u001b[39m\u001b[34m(season)\u001b[39m\n\u001b[32m     95\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuild_match_dataset\u001b[39m(season):\n\u001b[32m---> \u001b[39m\u001b[32m96\u001b[39m     fixtures = \u001b[43mload_fixtures_for_season\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseason\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     97\u001b[39m     stats = load_stats_for_season(season)\n\u001b[32m     99\u001b[39m     merged = fixtures.merge(stats, left_on=\u001b[33m\"\u001b[39m\u001b[33mHomeTeam\u001b[39m\u001b[33m\"\u001b[39m, right_on=\u001b[33m\"\u001b[39m\u001b[33mSquad\u001b[39m\u001b[33m\"\u001b[39m, how=\u001b[33m\"\u001b[39m\u001b[33mleft\u001b[39m\u001b[33m\"\u001b[39m, suffixes=(\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m_Home\u001b[39m\u001b[33m\"\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 53\u001b[39m, in \u001b[36mload_fixtures_for_season\u001b[39m\u001b[34m(season)\u001b[39m\n\u001b[32m     51\u001b[39m url = fixture_urls[season]\n\u001b[32m     52\u001b[39m response = requests.get(url, headers=headers)\n\u001b[32m---> \u001b[39m\u001b[32m53\u001b[39m \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     54\u001b[39m soup = BeautifulSoup(response.text, \u001b[33m\"\u001b[39m\u001b[33mlxml\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     55\u001b[39m tables = pd.read_html(\u001b[38;5;28mstr\u001b[39m(soup))\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/requests/models.py:1026\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1021\u001b[39m     http_error_msg = (\n\u001b[32m   1022\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m Server Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreason\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m for url: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.url\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m   1023\u001b[39m     )\n\u001b[32m   1025\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response=\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[31mHTTPError\u001b[39m: 403 Client Error: Forbidden for url: https://fbref.com/en/comps/9/2020-2021/schedule/2020-2021-Premier-League-Scores-and-Fixtures"
+      "\u001b[31mHTTPError\u001b[39m: 403 Client Error: Forbidden for url: https://fbref.com/en/comps/9/2021-2022/schedule/2021-2022-Premier-League-Scores-and-Fixtures"
      ]
     }
    ],
@@ -448,6 +451,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "import warnings\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
@@ -467,10 +472,10 @@
     "    \"2023-24\": \"https://fbref.com/en/comps/9/2023-2024/stats/2023-2024-Premier-League-Stats\",\n",
     "    \"2022-23\": \"https://fbref.com/en/comps/9/2022-2023/stats/2022-2023-Premier-League-Stats\",\n",
     "    \"2021-22\": \"https://fbref.com/en/comps/9/2021-2022/stats/2021-2022-Premier-League-Stats\",\n",
-    "    \"2020-21\": \"https://fbref.com/en/comps/9/2020-2021/stats/2020-2021-Premier-League-Stats\"\n",
+    "   \"2020-21\": \"https://fbref.com/en/comps/9/2020-2021/stats/2020-2021-Premier-League-Stats\"\n",
     "}\n",
     "\n",
-    "train_seasons = [\"2020-21\", \"2021-22\", \"2022-23\", \"2023-24\"]\n",
+    "train_seasons = [ \"2021-22\", \"2022-23\", \"2023-24\"]\n",
     "test_seasons = [\"2024-25\"]\n",
     "predict_season = [\"2025-26\"]\n",
     "\n",
@@ -483,14 +488,17 @@
     "    return extracted.astype(float).astype(\"Int64\")\n",
     "\n",
     "headers = {\n",
-    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36\"\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36\",\n",
+    "    \"Referer\": \"https://www.google.com/\",\n",
+    "    \"Accept-Language\": \"en-US,en;q=0.9\"\n",
     "}\n",
     "\n",
     "def load_fixtures_for_season(season):\n",
     "    url = fixture_urls[season]\n",
     "    response = requests.get(url, headers=headers)\n",
     "    response.raise_for_status()\n",
-    "    tables = pd.read_html(response.text, flavor=\"html5lib\")\n",
+    "    soup = BeautifulSoup(response.text, \"lxml\")\n",
+    "    tables = pd.read_html(str(soup))\n",
     "    \n",
     "    df = tables[0].copy()\n",
     "    df = df.rename(columns={\"Home\": \"HomeTeam\", \"Away\": \"AwayTeam\"})\n",
@@ -516,7 +524,8 @@
     "    url = stats_urls[season]\n",
     "    response = requests.get(url, headers=headers)\n",
     "    response.raise_for_status()\n",
-    "    tables = pd.read_html(response.text, flavor=\"html5lib\")\n",
+    "    soup = BeautifulSoup(response.text,\"lxml\")\n",
+    "    tables = pd.read_html(str(soup))\n",
     "\n",
     "    base = tables[0].copy()\n",
     "    base.columns = [col[-1] if isinstance(col, tuple) else col for col in base.columns]\n",
